--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -67,7 +67,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Deploy to staging (minimal downtime)
+      - name: Deploy to staging
         if: steps.get_tag_name.outputs.environment == 'staging'
         uses: appleboy/ssh-action@v1
         with:
@@ -80,75 +80,26 @@ jobs:
             git reset --hard origin/main
             set -a && source .env && set +a
             
-            # Show disk usage before deployment
-            echo "=== Disk usage before deployment ==="
+            echo "=== Pre-deployment disk usage ==="
             df -h / | tail -1
-            docker system df || true
             
-            # Function to wait for service health
-            wait_for_healthy() {
-              local service=$1
-              local max_attempts=30
-              local attempt=0
-              
-              echo "Waiting for $service to be healthy..."
-              while [ $attempt -lt $max_attempts ]; do
-                if docker compose ps $service | grep -q "healthy"; then
-                  echo "$service is healthy"
-                  return 0
-                fi
-                attempt=$((attempt + 1))
-                echo "Attempt $attempt/$max_attempts - waiting for $service..."
-                sleep 2
-              done
-              
-              echo "ERROR: $service failed to become healthy"
-              docker compose logs $service --tail 50
-              return 1
-            }
-            
-            # Clean up old images BEFORE building to save space
-            echo "=== Cleaning up old images before build ==="
+            # Clean up old images to save space
+            echo "=== Cleaning up old images ==="
             docker image prune -af --filter "until=24h" || true
             
-            # Build new images (while old containers still running)
-            echo "=== Building new images ==="
-            docker compose build api worker
+            # Build and deploy - Docker Compose handles orchestration
+            echo "=== Building and deploying services ==="
+            docker compose build
+            docker compose up -d --remove-orphans
             
-            # Quick restart API service (minimal downtime ~2-5 seconds)
-            echo "=== Deploying API service (quick restart) ==="
-            docker compose up -d --force-recreate --no-deps api
-            wait_for_healthy api
-            
-            # Quick restart Worker service (can run alongside for graceful shutdown)
-            echo "=== Deploying Worker service ==="
-            # Workers can overlap during transition for graceful job completion
-            docker compose up -d --no-deps --scale worker=2 worker || docker compose up -d --no-deps worker
-            sleep 5
-            wait_for_healthy worker
-            docker compose up -d --no-deps --scale worker=1 worker
-            
-            # Verify all services are running
-            echo "=== Verifying deployment ==="
-            docker compose ps
-            
-            # Clean up after deployment
+            # Quick cleanup
             echo "=== Post-deployment cleanup ==="
-            # Remove unused images (but keep recent ones)
             docker image prune -af --filter "until=1h" || true
-            # Clean up build cache aggressively
-            docker builder prune -af || true
-            # Remove dangling images
-            docker image prune -f || true
-            # Remove unused volumes (only those not attached to any container)
-            docker volume prune -f || true
+            docker builder prune -af --keep-storage=2GB || true
             
-            # Show final disk usage
-            echo "=== Disk usage after deployment ==="
+            echo "=== Deployment complete ==="
+            docker compose ps
             df -h / | tail -1
-            docker system df || true
-            
-            echo "=== Deployment complete - minimal downtime strategy ==="
 
       # - name: Deploy to staging [legacy]
       #   if: steps.get_tag_name.outputs.environment == 'staging'
